@@ -275,9 +275,35 @@ Return content-type of URL as string when retrieval succeeded."
 		    charset (match-string 3))
 	      (delete-region (point-min) pos))))
       ;; retrieve URL
-      (when url
-	(setq type (w3m-retrieve (w3m-url-transfer-encode-string url)
-				 nil no-cache nil referer))))
+      (and url
+	   (setq type (w3m-retrieve (w3m-url-transfer-encode-string url)
+				    nil no-cache nil referer))
+	   ;; Onload redirection for the OpenID transaction.
+	   (let ((case-fold-search t)
+		 (cur (current-buffer))
+		 (ourl url)
+		 (w3m-use-cookies t)
+		 (w3m-use-form t)
+		 (w3m-verbose (or shimbun-verbose w3m-verbose))
+		 form xurl post-data)
+	     (while (and
+		     (equal type "text/html")
+		     (progn
+		       (goto-char (point-min))
+		       (re-search-forward "\
+<body[\t\n\r ]+\\(?:[^\t\n\r >]+[\t\n\r ]+\\)*onload=" nil t))
+		     (with-temp-buffer
+		       (set-buffer-multibyte nil)
+		       (insert-buffer-substring cur)
+		       (w3m-region (point-min) (point-max))
+		       (setq form (car w3m-current-forms)))
+		     (setq xurl (aref form 2))
+		     (setq post-data (w3m-form-make-form-data form))
+		     (progn
+		       (w3m-message "Redirect to %s..." xurl)
+		       (erase-buffer)
+		       (setq type (w3m-retrieve xurl nil t post-data ourl)))
+		     (setq url (w3m-real-url (setq ourl xurl))))))))
     (if type
 	(progn
 	  (unless no-decode
